# rewrite

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  导师沟通提纲_2026-07-16.md
.github/workflows/: ci.yml
artifacts/: README.md  registry.jsonl
configs/environments/: target_a100_20260720.json
configs/profiling/: migration_gpu_smoke_v1.json  phase1_canary_v1.json  phase1_monitor_policy_v1.json  phase1_monitor_self_effect_slow_v1.json  phase1_monitor_self_effect_v1.json  phase1_recalibration_v1.json  phase2_discovery_decode_v1.json  phase2_discovery_prefill_v1.json
configs/rewrites/: mlp_bounded_v1.json  mlp_control_v1.json  rmsnorm_bounded_v1.json
configs/workloads/: phase1_pilot_v1.json  phase2_mlp_discovery_v1.json  phase2_rmsnorm_discovery_v1.json
docs/: NEXT_CODEX_PROMPT.md  SERVER_MIGRATION_GUIDE.md  artifact_policy.md  day1_minimal_scope.md  evidence_inventory.md  mainline_task.md  phase0_status.md  related_work_matrix.md  rewrite_research_plan.md  verified_execution_roadmap.md  思路.txt  续聊prompt.txt
docs/logs/: phase2_takeover_20260717.md
environment/: README.md
experiments/: miniexp_mlp_rewrite.py
rewrite_miniexp/: REPORT.md  candidate_summary.csv  selection_result.csv
rewrite_miniexp/smoke/: REPORT.md  candidate_summary.csv  selection_result.csv
rewrite_miniexp/smoke2/: REPORT.md  (+2 more)
scripts/: analyze_phase1.py  analyze_phase2.py  check_migration.py  decide_rmsnorm_family.py  enumerate_candidates.py  run_monitor_self_effect.py  run_phase1_audit.py
zhibiaoshiyan/: metrics_minimal.md  指标.txt  最小实验计划.txt
(+136 files in other folders)
