[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "rewrite-selector"
version = "0.1.0"
description = "Noise-aware multi-fidelity selection of equivalent LLM rewrites"
requires-python = ">=3.12"
dependencies = [
    "torch==2.10.0",
    "nvidia-ml-py>=12,<14",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
